--- a/src/main/resources/public/second_level.html
+++ b/src/main/resources/public/second_level.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>加拿大留学移民</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-	  <link href="css/site.min.css" rel="stylesheet">
-	  <style type="text/css">
+<head>
+    <title>加拿大留学移民</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/site.min.css" rel="stylesheet">
+    <style type="text/css">
 	      .index_content_title{
 		      border-bottom:2px solid #e5311a;
 			  padding:0 0 5px 6px;
@@ -36,111 +36,127 @@
 			  padding:0px;
 		  }	    
 		  
-      </style>
-   </head>
-   <body>
+
+    </style>
+</head>
+<body>
 <div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<nav class="navbar navbar-default" role="navigation">
-				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">加拿大留学移民</a>
-				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li>
-							 <a href="#">首页</a>
-						</li>
-						<li>
-							 <a href="#">移民留学</a>
-						</li>
-						<li class="dropdown active">
-							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">公司简介<strong class="caret"></strong></a>
-							<ul class="dropdown-menu">
-								<li>
-									 <a href="#">企业理念</a>
-								</li>
-								<li>
-									 <a href="#">组织结构</a>
-								</li>
-								<li>
-									 <a href="#">公司资质</a>
-								</li>
-							</ul>
-						</li>
-						<li>
-							 <a href="#">加拿大概况</a>
-						</li>
-						<li>
-							 <a href="#">实用贴士</a>
-						</li>						
-					</ul>
-				</div>
-			</nav>
-		</div>
-	</div>
     <div class="row clearfix">
-	    <div class="col-md-2 column">
+        <div class="col-md-12 column">
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target="#bs-example-navbar-collapse-1"><span
+                            class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
+                            class="icon-bar"></span><span class="icon-bar"></span></button>
+                    <a class="navbar-brand" href="#">加拿大留学移民</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#">首页</a>
+                        </li>
+                        <li>
+                            <a href="#">移民留学</a>
+                        </li>
+                        <li class="dropdown active">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">公司简介<strong
+                                    class="caret"></strong></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="#">企业理念</a>
+                                </li>
+                                <li>
+                                    <a href="#">组织结构</a>
+                                </li>
+                                <li>
+                                    <a href="#">公司资质</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#">加拿大概况</a>
+                        </li>
+                        <li>
+                            <a href="#">实用贴士</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <div class="row clearfix">
+        <div class="col-md-2 column">
             <ul class="nav nav-pills nav-stacked">
-              <li role="presentation" class="active"><a href="#"> <span class="glyphicon glyphicon-globe"></span> &nbsp;企业理念</a></li>
-              <li role="presentation"><a href="#"><span class="glyphicon glyphicon-user"></span>&nbsp;组织结构</a></li>
-              <li role="presentation"><a href="#"><span class="glyphicon glyphicon-certificate"></span>&nbsp;公司资质</a></li>
-            </ul>  
-		</div>
-		<div class="col-md-10 column highlight">
+                <li role="presentation" class="active"><a href="#"> <span class="glyphicon glyphicon-globe"></span>
+                    &nbsp;企业理念</a></li>
+                <li role="presentation"><a href="#"><span class="glyphicon glyphicon-user"></span>&nbsp;组织结构</a></li>
+                <li role="presentation"><a href="#"><span class="glyphicon glyphicon-certificate"></span>&nbsp;公司资质</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-10 column highlight">
             <div class="page-header bg-info">
-              <h3>我们的理念 <small>帮助更多人完成加拿大的梦想</small></h3>
+                <h3>我们的理念
+                    <small>帮助更多人完成加拿大的梦想</small>
+                </h3>
             </div>
-			<p class="lead">加拿大不再是一个遥远的梦了</p>
-			<div  style="display:block">
-			<img  style="float:left;padding:20px 20px 20px 20px;" src="image/city.jpg" alt="..." class="img-circle" width="200px" height="200px">
-			<p> just for test
- 雷丁大学下设4个分院：经济和社会科学学院、艺术和人文学科学院、理科学院和生命科学学院；目前提供国际预科、本科、硕士、博士等多层次学位教育。在具体专业方面，有戏剧舞蹈，数学，统计，商务管理，心理学等不同方面，以满足不同的学生要求。学校专业设置几乎涵盖了所有热门方面。
+            <p class="lead">加拿大不再是一个遥远的梦了</p>
+            <div style="display:block">
+                <img style="float:left;padding:20px 20px 20px 20px;" src="image/city.jpg" alt="..." class="img-circle"
+                     width="200px" height="200px">
+                <p> just for test
+                    雷丁大学下设4个分院：经济和社会科学学院、艺术和人文学科学院、理科学院和生命科学学院；目前提供国际预科、本科、硕士、博士等多层次学位教育。在具体专业方面，有戏剧舞蹈，数学，统计，商务管理，心理学等不同方面，以满足不同的学生要求。学校专业设置几乎涵盖了所有热门方面。
 
-雷丁大学已然凭借其独特的教学风格和严谨的教学团队，成为英国著名大学，在英国乃至世界赢得一定声誉。包括农业与食品，教师培训，艺术和设计在内的多个专业位居英国前十位，是一流领军大学。据报告，有89%的学生“满意”在雷丁大学的学习经历，有高达92%的国际生“满意/非常满意”在雷丁大学接受的教育和支持。
+                    雷丁大学已然凭借其独特的教学风格和严谨的教学团队，成为英国著名大学，在英国乃至世界赢得一定声誉。包括农业与食品，教师培训，艺术和设计在内的多个专业位居英国前十位，是一流领军大学。据报告，有89%的学生“满意”在雷丁大学的学习经历，有高达92%的国际生“满意/非常满意”在雷丁大学接受的教育和支持。
 
-雷丁大学主要的Whiteknights校区坐落于有130公顷大小的园区，周别绿树环绕，有湖相依，并有野生动物存在，真是风景宜人，安谧舒适。并且，雷丁大学最近投资超过1亿英镑用于校园设施的整修与扩建。而在学校周围，是雷丁镇的购物区，有书店超市等一系列设施帮助学生生活学习，并且雷丁距离伦敦，伯明翰都路途很近，交通便利。 
-			</p>
-			<p>
- 雷丁大学下设4个分院：经济和社会科学学院、艺术和人文学科学院、理科学院和生命科学学院；目前提供国际预科、本科、硕士、博士等多层次学位教育。在具体专业方面，有戏剧舞蹈，数学，统计，商务管理，心理学等不同方面，以满足不同的学生要求。学校专业设置几乎涵盖了所有热门方面。
+                    雷丁大学主要的Whiteknights校区坐落于有130公顷大小的园区，周别绿树环绕，有湖相依，并有野生动物存在，真是风景宜人，安谧舒适。并且，雷丁大学最近投资超过1亿英镑用于校园设施的整修与扩建。而在学校周围，是雷丁镇的购物区，有书店超市等一系列设施帮助学生生活学习，并且雷丁距离伦敦，伯明翰都路途很近，交通便利。
+                </p>
+                <p>
+                    雷丁大学下设4个分院：经济和社会科学学院、艺术和人文学科学院、理科学院和生命科学学院；目前提供国际预科、本科、硕士、博士等多层次学位教育。在具体专业方面，有戏剧舞蹈，数学，统计，商务管理，心理学等不同方面，以满足不同的学生要求。学校专业设置几乎涵盖了所有热门方面。
 
-雷丁大学已然凭借其独特的教学风格和严谨的教学团队，成为英国著名大学，在英国乃至世界赢得一定声誉。包括农业与食品，教师培训，艺术和设计在内的多个专业位居英国前十位，是一流领军大学。据报告，有89%的学生“满意”在雷丁大学的学习经历，有高达92%的国际生“满意/非常满意”在雷丁大学接受的教育和支持。
+                    雷丁大学已然凭借其独特的教学风格和严谨的教学团队，成为英国著名大学，在英国乃至世界赢得一定声誉。包括农业与食品，教师培训，艺术和设计在内的多个专业位居英国前十位，是一流领军大学。据报告，有89%的学生“满意”在雷丁大学的学习经历，有高达92%的国际生“满意/非常满意”在雷丁大学接受的教育和支持。
 
-雷丁大学主要的Whiteknights校区坐落于有130公顷大小的园区，周别绿树环绕，有湖相依，并有野生动物存在，真是风景宜人，安谧舒适。并且，雷丁大学最近投资超过1亿英镑用于校园设施的整修与扩建。而在学校周围，是雷丁镇的购物区，有书店超市等一系列设施帮助学生生活学习，并且雷丁距离伦敦，伯明翰都路途很近，交通便利。 
-			</p>
-			<p>
- 雷丁大学下设4个分院：经济和社会科学学院、艺术和人文学科学院、理科学院和生命科学学院；目前提供国际预科、本科、硕士、博士等多层次学位教育。在具体专业方面，有戏剧舞蹈，数学，统计，商务管理，心理学等不同方面，以满足不同的学生要求。学校专业设置几乎涵盖了所有热门方面。
+                    雷丁大学主要的Whiteknights校区坐落于有130公顷大小的园区，周别绿树环绕，有湖相依，并有野生动物存在，真是风景宜人，安谧舒适。并且，雷丁大学最近投资超过1亿英镑用于校园设施的整修与扩建。而在学校周围，是雷丁镇的购物区，有书店超市等一系列设施帮助学生生活学习，并且雷丁距离伦敦，伯明翰都路途很近，交通便利。
+                </p>
+                <p>
+                    雷丁大学下设4个分院：经济和社会科学学院、艺术和人文学科学院、理科学院和生命科学学院；目前提供国际预科、本科、硕士、博士等多层次学位教育。在具体专业方面，有戏剧舞蹈，数学，统计，商务管理，心理学等不同方面，以满足不同的学生要求。学校专业设置几乎涵盖了所有热门方面。
 
-雷丁大学已然凭借其独特的教学风格和严谨的教学团队，成为英国著名大学，在英国乃至世界赢得一定声誉。包括农业与食品，教师培训，艺术和设计在内的多个专业位居英国前十位，是一流领军大学。据报告，有89%的学生“满意”在雷丁大学的学习经历，有高达92%的国际生“满意/非常满意”在雷丁大学接受的教育和支持。
+                    雷丁大学已然凭借其独特的教学风格和严谨的教学团队，成为英国著名大学，在英国乃至世界赢得一定声誉。包括农业与食品，教师培训，艺术和设计在内的多个专业位居英国前十位，是一流领军大学。据报告，有89%的学生“满意”在雷丁大学的学习经历，有高达92%的国际生“满意/非常满意”在雷丁大学接受的教育和支持。
 
-雷丁大学主要的Whiteknights校区坐落于有130公顷大小的园区，周别绿树环绕，有湖相依，并有野生动物存在，真是风景宜人，安谧舒适。并且，雷丁大学最近投资超过1亿英镑用于校园设施的整修与扩建。而在学校周围，是雷丁镇的购物区，有书店超市等一系列设施帮助学生生活学习，并且雷丁距离伦敦，伯明翰都路途很近，交通便利。 
-			</p>			
-			</div>
-		</div>
-	</div>
+                    雷丁大学主要的Whiteknights校区坐落于有130公顷大小的园区，周别绿树环绕，有湖相依，并有野生动物存在，真是风景宜人，安谧舒适。并且，雷丁大学最近投资超过1亿英镑用于校园设施的整修与扩建。而在学校周围，是雷丁镇的购物区，有书店超市等一系列设施帮助学生生活学习，并且雷丁距离伦敦，伯明翰都路途很近，交通便利。
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
 <footer class="main-footer">
-<div class="container" stype="background-color:black">
-	<div class="row clearfix">
-<div class="col-sm-4">
+    <div class="container" stype="background-color:black">
+        <div class="row clearfix">
+            <div class="col-sm-4">
                 <div class="widget">
                     <h4 class="title">友情链接</h4>
                     <div class="content friend-links">
-                        <a href="http://www.bootcss.com/" title="加拿大留学链接1" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Bootstrap中文网'])" target="_blank">加拿大留学链接1</a>
-                        <a href="http://www.golaravel.com/" title="加拿大留学链接2" onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Laravel中文网'])" target="_blank">加拿大留学链接2</a>
+                        <a href="http://www.bootcss.com/" title="加拿大留学链接1"
+                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Bootstrap中文网'])" target="_blank">加拿大留学链接1</a>
+                        <a href="http://www.golaravel.com/" title="加拿大留学链接2"
+                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Laravel中文网'])"
+                           target="_blank">加拿大留学链接2</a>
                     </div>
                 </div>
-</div>
+            </div>
 
-	<div class="col-sm-4">
+            <div class="col-sm-4">
                 <div class="widget">
                     <h4 class="title">联系我们</h4>
-                    			 <address> <strong>China, Inc.</strong><br /> 795 Folsom Ave, Suite 600<br /> San Francisco, CA 94107<br /> <abbr title="Phone">P:</abbr> (123) 456-7890</address>
+                    <address><strong>China, Inc.</strong><br/> 795 Folsom Ave, Suite 600<br/> San Francisco, CA
+                        94107<br/> <abbr title="Phone">P:</abbr> (123) 456-7890
+                    </address>
                 </div>
             </div>
-	
-</div>
-</div>
+
+        </div>
+    </div>
 </footer>
 <div class="copyright">
     <div class="container">
@@ -152,9 +168,9 @@
         </div>
     </div>
 </div>
-      <!-- jQuery (Bootstrap 的 JavaScript 插件需要引入 jQuery) -->
-      <script src="https://code.jquery.com/jquery.js"></script>
-      <!-- 包括所有已编译的插件 -->
-      <script src="js/bootstrap.min.js"></script>
-   </body>
+<!-- jQuery (Bootstrap 的 JavaScript 插件需要引入 jQuery) -->
+<script src="https://code.jquery.com/jquery.js"></script>
+<!-- 包括所有已编译的插件 -->
+<script src="js/bootstrap.min.js"></script>
+</body>
 </html>
