1) enbale article add&display function 2) enbale generate static html page with freemarker 3) login page added & system_manager page added 4) dynamic page use ajax to get data instead of jsp/....

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -44,7 +44,7 @@
 <body>
 <div class="container">
     <div class="row clearfix">
-        <div class="col-md-12 column">
+        <div class="col-md-12 column" id="navigation">
             <nav class="navbar navbar-default" role="navigation">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -85,7 +85,9 @@
                     </ul>
                 </div>
             </nav>
-            <div class="row clearfix">
+        </div>
+    </div>
+    <div class="row clearfix">
                 <div class="col-md-12 column">
                     <div class="carousel slide" id="carousel-182023">
                         <ol class="carousel-indicators">
@@ -145,7 +147,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row clearfix">
+    <div class="row clearfix">
                 <div class="col-md-4 column index_content">
                     <h3 class="index_content_title">
                         我们的优势
@@ -207,8 +209,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
     <div class="row clearfix">
         <div class="col-md-9">
             <h3 class="index_content_title">定制加拿大留学移民专属方案</h3>
@@ -271,7 +271,6 @@
             </div>
         </div>
     </div>
-</div>
 </div>
 <footer class="main-footer">
     <div class="container" stype="background-color:black">
